# smplx_fbx_convertor

fbx_sdk/: .gitignore  Install_FbxSdk.txt  README.md
fbx_sdk/fbx_python_sdk_202034/: PythonBindings.py  project.py  pyproject.toml  readme.txt
fbx_sdk/fbx_python_sdk_202034/samples/Audio/: Audio.py
fbx_sdk/fbx_python_sdk_202034/samples/ExportScene01/: ExportScene01.py
fbx_sdk/fbx_python_sdk_202034/samples/ExportScene02/: ExportScene02.py
fbx_sdk/fbx_python_sdk_202034/samples/ExportScene03/: ExportScene03.py
fbx_sdk/fbx_python_sdk_202034/samples/ExportScene04/: ExportScene04.py
fbx_sdk/fbx_python_sdk_202034/samples/ImportScene/: ImportScene.py
fbx_sdk/fbx_python_sdk_202034/sip/: fbxSIP_4_19.sip  fbx_module.sip  fbxanimutilities.sip  fbxbindingtable.sip  fbxcache.sip  fbxcluster.sip  fbxio.sip  fbxlayerelement.sip  fbxmanager.sip  fbxmesh.sip  fbxobject.sip  fbxskin.sip  fbxtypes.sip  fbxvector2.sip
